{
  "version": 4,
  "terraform_version": "1.6.4",
  "serial": 24,
  "lineage": "5d2d8d30-b2bc-8db4-1cc0-e834986f7a8c",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:438544960239:network-acl/acl-054f52f02eb7de39c",
            "default_network_acl_id": "acl-054f52f02eb7de39c",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-054f52f02eb7de39c",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "438544960239",
            "subnet_ids": [
              "subnet-02a33df07bd6c69a8",
              "subnet-0410f167aeb618dee",
              "subnet-06a61decf7d9aecc1",
              "subnet-08e7c484aa81e50ce",
              "subnet-09f102cebc7264b55",
              "subnet-0d364735ea65b86d7"
            ],
            "tags": {
              "Name": "vpc-terraform-aws-prod-default",
              "environment": "prod",
              "owners": "aws"
            },
            "tags_all": {
              "Name": "vpc-terraform-aws-prod-default",
              "environment": "prod",
              "owners": "aws"
            },
            "vpc_id": "vpc-01b14e9ec34dfef3c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:438544960239:route-table/rtb-0aa6eb19b4369a2ab",
            "default_route_table_id": "rtb-0aa6eb19b4369a2ab",
            "id": "rtb-0aa6eb19b4369a2ab",
            "owner_id": "438544960239",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "vpc-terraform-aws-prod-default",
              "environment": "prod",
              "owners": "aws"
            },
            "tags_all": {
              "Name": "vpc-terraform-aws-prod-default",
              "environment": "prod",
              "owners": "aws"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-01b14e9ec34dfef3c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:438544960239:security-group/sg-00b1a13cb7f012db9",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-00b1a13cb7f012db9",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "438544960239",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "vpc-terraform-aws-prod-default",
              "environment": "prod",
              "owners": "aws"
            },
            "tags_all": {
              "Name": "vpc-terraform-aws-prod-default",
              "environment": "prod",
              "owners": "aws"
            },
            "vpc_id": "vpc-01b14e9ec34dfef3c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ecb9f2732dca4140",
            "domain": "vpc",
            "id": "eipalloc-0ecb9f2732dca4140",
            "network_border_group": "us-east-2",
            "public_dns": "ec2-13-58-98-152.us-east-2.compute.amazonaws.com",
            "public_ip": "13.58.98.152",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "vpc-terraform-aws-prod-us-east-2a",
              "environment": "prod",
              "owners": "aws"
            },
            "tags_all": {
              "Name": "vpc-terraform-aws-prod-us-east-2a",
              "environment": "prod",
              "owners": "aws"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:438544960239:internet-gateway/igw-0a5f334e2504ba297",
            "id": "igw-0a5f334e2504ba297",
            "owner_id": "438544960239",
            "tags": {
              "Name": "vpc-terraform-aws-prod",
              "environment": "prod",
              "owners": "aws"
            },
            "tags_all": {
              "Name": "vpc-terraform-aws-prod",
              "environment": "prod",
              "owners": "aws"
            },
            "vpc_id": "vpc-01b14e9ec34dfef3c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ecb9f2732dca4140",
            "association_id": "eipassoc-03a3a5ced5da84c22",
            "connectivity_type": "public",
            "id": "nat-06888d733718684ec",
            "network_interface_id": "eni-08bf76de9ab6cdadd",
            "private_ip": "10.0.101.37",
            "public_ip": "13.58.98.152",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-02a33df07bd6c69a8",
            "tags": {
              "Name": "vpc-terraform-aws-prod-us-east-2a",
              "environment": "prod",
              "owners": "aws"
            },
            "tags_all": {
              "Name": "vpc-terraform-aws-prod-us-east-2a",
              "environment": "prod",
              "owners": "aws"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0a9a83f797a8002f91080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-06888d733718684ec",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0a9a83f797a8002f9",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0a5f334e2504ba297",
            "id": "r-rtb-08b0a4c37dc611f581080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-08b0a4c37dc611f58",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:438544960239:route-table/rtb-0a9a83f797a8002f9",
            "id": "rtb-0a9a83f797a8002f9",
            "owner_id": "438544960239",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "vpc-terraform-aws-prod-private",
              "environment": "prod",
              "owners": "aws"
            },
            "tags_all": {
              "Name": "vpc-terraform-aws-prod-private",
              "environment": "prod",
              "owners": "aws"
            },
            "timeouts": null,
            "vpc_id": "vpc-01b14e9ec34dfef3c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:438544960239:route-table/rtb-08b0a4c37dc611f58",
            "id": "rtb-08b0a4c37dc611f58",
            "owner_id": "438544960239",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "vpc-terraform-aws-prod-public",
              "environment": "prod",
              "owners": "aws"
            },
            "tags_all": {
              "Name": "vpc-terraform-aws-prod-public",
              "environment": "prod",
              "owners": "aws"
            },
            "timeouts": null,
            "vpc_id": "vpc-01b14e9ec34dfef3c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09cd27d54eb6b88b0",
            "route_table_id": "rtb-0a9a83f797a8002f9",
            "subnet_id": "subnet-0410f167aeb618dee"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0806a8fcfadd5bb7d",
            "route_table_id": "rtb-0a9a83f797a8002f9",
            "subnet_id": "subnet-08e7c484aa81e50ce"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0858043d4dcc5f74d",
            "route_table_id": "rtb-0a9a83f797a8002f9",
            "subnet_id": "subnet-06a61decf7d9aecc1"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e76515de0598cfaa",
            "route_table_id": "rtb-08b0a4c37dc611f58",
            "subnet_id": "subnet-02a33df07bd6c69a8"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ef8f2ebf564f3713",
            "route_table_id": "rtb-08b0a4c37dc611f58",
            "subnet_id": "subnet-09f102cebc7264b55"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cf9c1c63f13fc860",
            "route_table_id": "rtb-08b0a4c37dc611f58",
            "subnet_id": "subnet-0d364735ea65b86d7"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:438544960239:subnet/subnet-0410f167aeb618dee",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0410f167aeb618dee",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "438544960239",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "VPC Private Subnets",
              "environment": "prod",
              "owners": "aws"
            },
            "tags_all": {
              "Name": "VPC Private Subnets",
              "environment": "prod",
              "owners": "aws"
            },
            "vpc_id": "vpc-01b14e9ec34dfef3c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:438544960239:subnet/subnet-08e7c484aa81e50ce",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08e7c484aa81e50ce",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "438544960239",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "VPC Private Subnets",
              "environment": "prod",
              "owners": "aws"
            },
            "tags_all": {
              "Name": "VPC Private Subnets",
              "environment": "prod",
              "owners": "aws"
            },
            "vpc_id": "vpc-01b14e9ec34dfef3c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:438544960239:subnet/subnet-06a61decf7d9aecc1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06a61decf7d9aecc1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "438544960239",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "VPC Private Subnets",
              "environment": "prod",
              "owners": "aws"
            },
            "tags_all": {
              "Name": "VPC Private Subnets",
              "environment": "prod",
              "owners": "aws"
            },
            "vpc_id": "vpc-01b14e9ec34dfef3c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:438544960239:subnet/subnet-02a33df07bd6c69a8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02a33df07bd6c69a8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "438544960239",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "VPC Public Subnets",
              "environment": "prod",
              "owners": "aws"
            },
            "tags_all": {
              "Name": "VPC Public Subnets",
              "environment": "prod",
              "owners": "aws"
            },
            "vpc_id": "vpc-01b14e9ec34dfef3c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:438544960239:subnet/subnet-09f102cebc7264b55",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09f102cebc7264b55",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "438544960239",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "VPC Public Subnets",
              "environment": "prod",
              "owners": "aws"
            },
            "tags_all": {
              "Name": "VPC Public Subnets",
              "environment": "prod",
              "owners": "aws"
            },
            "vpc_id": "vpc-01b14e9ec34dfef3c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:438544960239:subnet/subnet-0d364735ea65b86d7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.0.103.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d364735ea65b86d7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "438544960239",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "VPC Public Subnets",
              "environment": "prod",
              "owners": "aws"
            },
            "tags_all": {
              "Name": "VPC Public Subnets",
              "environment": "prod",
              "owners": "aws"
            },
            "vpc_id": "vpc-01b14e9ec34dfef3c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:438544960239:vpc/vpc-01b14e9ec34dfef3c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-054f52f02eb7de39c",
            "default_route_table_id": "rtb-0aa6eb19b4369a2ab",
            "default_security_group_id": "sg-00b1a13cb7f012db9",
            "dhcp_options_id": "dopt-0d7a1ce098f2d6c13",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-01b14e9ec34dfef3c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0aa6eb19b4369a2ab",
            "owner_id": "438544960239",
            "tags": {
              "Name": "vpc-terraform-aws-prod",
              "environment": "prod",
              "owners": "aws"
            },
            "tags_all": {
              "Name": "vpc-terraform-aws-prod",
              "environment": "prod",
              "owners": "aws"
            }
          }
        }
      ]
    }
  ]
}